# task_manager

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  task.c  task.h
